# cppDiploma_2

./: CMakeLists.txt  config.ini  index.html
client/: CMakeLists.txt  main.cpp
client/indexer/: indexer.cpp  indexer.h
client/indexer/link_get/: link_get.cpp  link_get.h
client/indexer/parser/: parser.cpp  parser.h
client/indexer/sql_database/: sql_database.cpp  sql_database.h
client/utils/: utils.cpp  utils.h
ini_parser/: ini_parser.h
server/: CMakeLists.txt  connection.cpp  connection.h  main.cpp
server/engine/: engine.cpp  engine.h
